# tornasol-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: random_agent.py
src/tornasol/: __init__.py  cli.py  client.py  hash.py  runner.py  types.py
tests/: test_client.py
