[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tornasol"
version = "0.1.0"
description = "Official Python SDK for tornasol - the turn-based assessment platform."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kemeny Studio" }]
keywords = ["tornasol", "kemeny", "agent", "evaluation", "hiring", "turn-based"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/KemenyStudio/tornasol-sdk-python"
Issues = "https://github.com/KemenyStudio/tornasol-sdk-python/issues"
Repository = "https://github.com/KemenyStudio/tornasol-sdk-python.git"

[project.scripts]
tornasol-run-agent = "tornasol.cli:run_agent_main"
tornasol-submit-agent = "tornasol.cli:submit_agent_main"

[tool.hatch.build.targets.wheel]
packages = ["src/tornasol"]
